tests/spec/emit/snapshots/channel_split_destructure_ref_receiver.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn drain(ch: Ref<Channel<int>>) {
    let (tx, rx) = ch.split();
    tx.send(42);
    let _ = rx.receive();
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func drain(ch *chan int) {
	ch_1 := *ch
	tx := (chan<- int)(ch_1)
	rx := (<-chan int)(ch_1)
	_ = lisette.SenderSend(tx, 42)
	_ = lisette.ReceiverReceive(rx)
}
