tests/spec/emit/snapshots/char_literal.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() {
    'a'
  }
---
package main

func test() {}
