tests/spec/emit/snapshots/char_newline.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() {
    '\n'
  }
---
package main

func test() {}
