tests/spec/emit/snapshots/clone_enumerated_slice.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn main() {
    let s = [1, 2, 3]
    let e = s.enumerate()
    let mut e2: EnumeratedSlice<int> = e.clone()
    e2 = s.enumerate()
    let _ = e
    let _ = e2
  }
---
package main

import "slices"

func main() {
	s := []int{1, 2, 3}
	e := s
	e2 := slices.Clone(e)
	e2 = s
	_ = e
	_ = e2
}
