tests/spec/emit/snapshots/clone_slice_of_tuples_deep.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn main() {
    let a = [(1, [2, 3])]
    let mut b = a.clone()
    b[0] = (4, [5])
    let _ = a
    let _ = b
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"slices"
)

func main() {
	a := []lisette.Tuple2[int, []int]{lisette.MakeTuple2[int, []int](1, []int{2, 3})}
	b := lisette.SliceCloneFunc(a, func(e lisette.Tuple2[int, []int]) lisette.Tuple2[int, []int] {
		e.Second = slices.Clone(e.Second)
		return e
	})
	b[0] = lisette.MakeTuple2[int, []int](4, []int{5})
	_ = a
	_ = b
}
