tests/spec/emit/snapshots/closure_let_shadow.snap
---
source: tests/spec/emit/functions.rs
description: "input: \nfn test() -> string {\n  let f = || -> string {\n    let x = 1\n    let x = f\"was {x}\"\n    x\n  }\n  f()\n}\n"
---
package main

import "fmt"

func test() string {
	f := func() string {
		x := 1
		x_1 := fmt.Sprintf("was %d", x)
		return x_1
	}
	return f()
}
